portfolio web continue

--- a/index.html
+++ b/index.html
@@ -27,7 +27,6 @@
 
             </div>
 
-
             <!--|||||||||   HERO SECTION    |||||||||  -->
 
             <div class="hero-section">
@@ -47,7 +46,6 @@
 
                     <div class="btn-pink" id="btn">Hire me</div>
                 </div>
-
 
                 <!--|||||||||   HERO SECTION  RIGHT  |||||||||  -->
 
@@ -78,50 +76,219 @@
                 </div>
             </div>
 
+        </div> <!-- CONTAINER ENDS HERE -->
 
-            <div class="project-section">
-                <h2 class="page-header">Projects</h2>
+        <!-- ||||||||| PROJECT SECTION ||||||||| -->
 
-                <div class="project-container">
-                    <div class="project-card" id="project1">
-                        <div class="project-number">01</div>
-                        <div class="project-content">
+        <div class="project-section" id="projects">
+            <h2 class="page-header">Projects</h2>
 
-                            <div class="project-skills-container">
-                                <img class="project-skill" src="./images/stack/HTML.png" alt=""/>
-                                <img class="project-skill" src="./images/stack/CSS.png" alt=""/>
-                                <img class="project-skill" src="./images/stack/Javascript.svg" alt=""/>
-                                <img class="project-skill" src="./images/stack/Express.png" alt=""/>
-                                <img class="project-skill" src="./images/stack/NextJsCircle.png" alt=""/>
-                                <img class="project-skill" src="./images/stack/Tailwind.png" alt=""/>
-                                <img class="project-skill" src="./images/stack/NodeJs.svg" alt=""/>
-                                <img class="project-skill" src="./images/stack/MongoDB.svg" alt=""/>
-                                <img class="project-skill" src="./images/stack/Redux.svg" alt=""/>
-                                <img class="project-skill" src="./images/stack/Vercel.svg" alt=""/>
-                            </div>
+            <div class="project-container">
 
-                            <h2 class="project-heading">Tint & Orange</h2>
+                <!-- Project 1 -->
+                <div class="project-card" id="project1">
+                    <div class="project-number project-number-right">01</div>
+                    <div class="project-content project-content-left">
+                        <div class="project-skills-container">
+                            <img class="project-skill" src="./images/stack/HTML.png" alt=""/>
+                            <img class="project-skill" src="./images/stack/CSS.png" alt=""/>
+                            <img class="project-skill" src="./images/stack/Javascript.svg" alt=""/>
+                            <img class="project-skill" src="./images/stack/Express.png" alt=""/>
+                            <img class="project-skill" src="./images/stack/NextJsCircle.png" alt=""/>
+                            <img class="project-skill" src="./images/stack/Tailwind.png" alt=""/>
+                            <img class="project-skill" src="./images/stack/NodeJs.svg" alt=""/>
+                            <img class="project-skill" src="./images/stack/MongoDB.svg" alt=""/>
+                            <img class="project-skill" src="./images/stack/Redux.svg" alt=""/>
+                            <img class="project-skill" src="./images/stack/Vercel.svg" alt=""/>
+                        </div>
 
-                            <div class="project-subheading">
-                                Its is a car modification company
-                                which provide you sheets to protect your car from scratch
-                            </div>
+                        <h2 class="project-heading">Tint & Orange</h2>
 
-                            <div class="btn-group">
-                                <button class="btn-pink btn-project">READ MORE</button>
-                                <a href="">
-                                    <i title="GithHubLink" class="fa-brands fa-github icon"></i>
-                                </a>
-                                <a href="">
-                                    <i title="Live Link" class="fa-solid fa-link icon"></i>
-                                </a>
-                            </div>
+                        <div class="project-subheading">
+                            Its is a car modification company
+                            which provide you sheets to protect your car from scratch
+                        </div>
+
+                        <div class="btn-group">
+                            <button class="btn-pink btn-project">READ MORE</button>
+                            <a href="">
+                                <i title="GithHubLink" class="fa-brands fa-github icon"></i>
+                            </a>
+                            <a href="">
+                                <i title="Live Link" class="fa-solid fa-link icon"></i>
+                            </a>
                         </div>
                     </div>
                 </div>
+
+                <!-- Project 2 -->
+                <div class="project-card" id="project2">
+                    <div class="project-number project-number-left">02</div>
+                    <div class="project-content project-content-right">
+                        <div class="project-skills-container">
+                            <img class="project-skill" src="./images/stack/HTML.png" alt=""/>
+                            <img class="project-skill" src="./images/stack/CSS.png" alt=""/>
+                            <img class="project-skill" src="./images/stack/Javascript.svg" alt=""/>
+                            <img class="project-skill" src="./images/stack/Express.png" alt=""/>
+                            <img class="project-skill" src="./images/stack/NextJsCircle.png" alt=""/>
+                            <img class="project-skill" src="./images/stack/Tailwind.png" alt=""/>
+                            <img class="project-skill" src="./images/stack/NodeJs.svg" alt=""/>
+                            <img class="project-skill" src="./images/stack/MongoDB.svg" alt=""/>
+                            <img class="project-skill" src="./images/stack/Redux.svg" alt=""/>
+                            <img class="project-skill" src="./images/stack/Vercel.svg" alt=""/>
+                        </div>
+
+                        <h2 class="project-heading">Yasharth dixit</h2>
+
+                        <div class="project-subheading">
+                            Its is a car modification company
+                            which provide you sheets to protect your car from scratch
+                        </div>
+
+                        <div class="btn-group">
+                            <button class="btn-pink btn-project">READ MORE</button>
+                            <a href="">
+                                <i title="GithHubLink" class="fa-brands fa-github icon"></i>
+                            </a>
+                            <a href="">
+                                <i title="Live Link" class="fa-solid fa-link icon"></i>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Project 3 -->
+                <div class="project-card" id="project3">
+                    <div class="project-number project-number-right">03</div>
+                    <div class="project-content project-content-left">
+                        <div class="project-skills-container">
+                            <img class="project-skill" src="./images/stack/HTML.png" alt=""/>
+                            <img class="project-skill" src="./images/stack/CSS.png" alt=""/>
+                            <img class="project-skill" src="./images/stack/Javascript.svg" alt=""/>
+                            <img class="project-skill" src="./images/stack/Express.png" alt=""/>
+                            <img class="project-skill" src="./images/stack/NextJsCircle.png" alt=""/>
+                            <img class="project-skill" src="./images/stack/Tailwind.png" alt=""/>
+                            <img class="project-skill" src="./images/stack/NodeJs.svg" alt=""/>
+                            <img class="project-skill" src="./images/stack/MongoDB.svg" alt=""/>
+                            <img class="project-skill" src="./images/stack/Redux.svg" alt=""/>
+                            <img class="project-skill" src="./images/stack/Vercel.svg" alt=""/>
+                        </div>
+
+                        <h2 class="project-heading">Yasharth Dixit</h2>
+
+                        <div class="project-subheading">
+                           A website for interior designer to showcase their works and samples
+                        </div>
+
+                        <div class="btn-group">
+                            <button class="btn-pink btn-project">READ MORE</button>
+                            <a href="">
+                                <i title="GithHubLink" class="fa-brands fa-github icon"></i>
+                            </a>
+                            <a href="">
+                                <i title="Live Link" class="fa-solid fa-link icon"></i>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Project 4 -->
+                <div class="project-card" id="project4">
+                    <div class="project-number project-number-left">04</div>
+                    <div class="project-content project-content-right">
+                        <div class="project-skills-container">
+                            <img class="project-skill" src="./images/stack/HTML.png" alt=""/>
+                            <img class="project-skill" src="./images/stack/CSS.png" alt=""/>
+                            <img class="project-skill" src="./images/stack/Javascript.svg" alt=""/>
+                            <img class="project-skill" src="./images/stack/Express.png" alt=""/>
+                            <img class="project-skill" src="./images/stack/NextJsCircle.png" alt=""/>
+                            <img class="project-skill" src="./images/stack/Tailwind.png" alt=""/>
+                            <img class="project-skill" src="./images/stack/NodeJs.svg" alt=""/>
+                            <img class="project-skill" src="./images/stack/MongoDB.svg" alt=""/>
+                            <img class="project-skill" src="./images/stack/Redux.svg" alt=""/>
+                            <img class="project-skill" src="./images/stack/Vercel.svg" alt=""/>
+                        </div>
+
+                        <h2 class="project-heading">Granit</h2>
+
+                        <div class="project-subheading">
+                            A archietecture website to plan your building or home (English Language)
+                        </div>
+
+                        <div class="btn-group">
+                            <button class="btn-pink btn-project">READ MORE</button>
+                            <a href="">
+                                <i title="GithHubLink" class="fa-brands fa-github icon"></i>
+                            </a>
+                            <a href="">
+                                <i title="Live Link" class="fa-solid fa-link icon"></i>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+        </div>
+
+        <div id="skills" class="container skills-container">
+            <div class="skill-fade-text">Skills</div>
+
+            <div class="skill-container-left">
+                <h2 class="skill-heading">
+                    <span class="caps">M</span>e and
+                    <br/>
+                    MyTech Stack
+                </h2>
+
+                <div class="skill-subheading">
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid dolores cupiditate, eligendi iure
+                         rerum totam, dignissimos omnis officiis consectetur deleniti quisquam ea nulla fugiat tempora suscipit
+                          modi assumenda reiciendis quos.
+                        </p>
+
+                          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid dolores cupiditate, eligendi iure
+                         rerum totam, dignissimos omnis officiis consectetur deleniti quisquam ea nulla fugiat tempora suscipit
+                          modi assumenda reiciendis quos.
+                        </p>
+
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid dolores cupiditate, eligendi iure
+                         rerum totam, dignissimos omnis officiis consectetur deleniti quisquam ea nulla fugiat tempora suscipit
+                          modi assumenda reiciendis quos.
+                        </p>
             </div>
 
-        </div> <!-- container end -->
+            <div class="skill-container-right">
+                <img src="./images/userAsset/blob vector.png" class="blob-style" alt="" />
+
+                <img src="./images/stack/HTML.png" alt="" class="skills-logo" />
+                <img src="./images/stack/CSS.png" alt="" class="skills-logo" />
+                <img src="./images/stack/Bash.svg" alt="" class="skills-logo" />
+                <img src="./images/stack/Bootstrap.svg" alt="" class="skills-logo" />
+                <img src="./images/stack/ChartJs.svg" alt="" class="skills-logo" />
+                <img src="./images/stack/Docker.svg" alt="" class="skills-logo" />
+                <img src="./images/stack/Express.png" alt="" class="skills-logo" />
+                <img src="./images/stack/Git.svg" alt="" class="skills-logo" />
+                <img src="./images/stack/Graphql.svg" alt="" class="skills-logo" />
+                <img src="./images/stack/Github.svg" alt="" class="skills-logo" />
+                <img src="./images/stack/Javascript.svg" alt="" class="skills-logo" />
+                <img src="./images/stack/K8s.svg" alt="" class="skills-logo" />
+                <img src="./images/stack/MaterialUI.svg" alt="" class="skills-logo" />
+                <img src="./images/stack/MongoDB.svg" alt="" class="skills-logo" />
+                <img src="./images/stack/MongoDB.svg" alt="" class="skills-logo" />
+                <img src="./images/stack/Next.svg" alt="" class="skills-logo" />
+                <img src="./images/stack/Tailwind.png" alt="" class="skills-logo" />
+                <img src="./images/stack/Typescript.svg" alt="" class="skills-logo" />
+                <img src="./images/stack/Vercel.svg" alt="" class="skills-logo" />
+                <img src="./images/stack/Redux.svg" alt="" class="skills-logo" />
+
+ </div>
+
+
+
+
+
+
+        </div>
 
     </div> <!-- wrapper end -->
 
@@ -142,6 +309,5 @@
         backDelay: 1000,
       });
     </script>
-    
 </body>
 </html>
