--- a/index.html
+++ b/index.html
@@ -256,6 +256,7 @@
                           modi assumenda reiciendis quos.
                         </p>
             </div>
+            </div><!-- skill container left closed here -->
 
             <div class="skill-container-right">
                 <img src="./images/userAsset/blob vector.png" class="blob-style" alt="" />
@@ -280,15 +281,7 @@
                 <img src="./images/stack/Typescript.svg" alt="" class="skills-logo" />
                 <img src="./images/stack/Vercel.svg" alt="" class="skills-logo" />
                 <img src="./images/stack/Redux.svg" alt="" class="skills-logo" />
-
  </div>
-
-
-
-
-
-
-        </div>
 
     </div> <!-- wrapper end -->
 
