--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PORTFOLIO WEBSITE</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
 
     <div id="wrapper">
@@ -30,11 +32,11 @@
             <!--|||||||||   HERO SECTION    |||||||||  -->
 
             <div class="hero-section">
-                <div class="faded-text">John Doe</div>
+                <div class="faded-text">YASHARTH0107</div>
 
                 <div class="hero-section-left">
-                    <div class="hero-section-heading">Hi!! John Doe</div>
-                   
+                    <div class="hero-section-heading">Hi!! Yasharth Dixit This side</div>
+
                     <div class="hero-section-heading hero-section-sub-heading">
                         I am a <span class="role"></span>
                     </div>
@@ -51,27 +53,27 @@
 
                 <div class="hero-section-right">
                     <div class="absolute icons icon-dots">
-                        <img src="./images/userAsset/dots.png" alt=""/>
+                        <img src="./images/userAsset/dots.png" alt="" />
                     </div>
 
                     <div class="absolute icons icon-cube">
-                        <img src="./images/userAsset/cube.png" alt=""/>
+                        <img src="./images/userAsset/cube.png" alt="" />
                     </div>
 
                     <div class="absolute icons icon-circle">
-                        <img src="./images/userAsset/circle.png" alt=""/>
+                        <img src="./images/userAsset/circle.png" alt="" />
                     </div>
 
                     <div class="absolute icons icon-zigzak">
-                        <img src="./images/userAsset/zigzags.png" alt=""/>
+                        <img src="./images/userAsset/zigzags.png" alt="" />
                     </div>
 
                     <div class="absolute icons icon-plus">
-                        <img src="./images/userAsset/plus.png" alt=""/>
+                        <img src="./images/userAsset/plus.png" alt="" />
                     </div>
 
                     <div class="user-image">
-                        <img src="./images/userAsset/UserImage.png" alt=""/>
+                        <img src="img.jpg" style="width: 350px;" alt="" />
                     </div>
                 </div>
             </div>
@@ -90,23 +92,27 @@
                     <div class="project-number project-number-right">01</div>
                     <div class="project-content project-content-left">
                         <div class="project-skills-container">
-                            <img class="project-skill" src="./images/stack/HTML.png" alt=""/>
-                            <img class="project-skill" src="./images/stack/CSS.png" alt=""/>
-                            <img class="project-skill" src="./images/stack/Javascript.svg" alt=""/>
-                            <img class="project-skill" src="./images/stack/Express.png" alt=""/>
-                            <img class="project-skill" src="./images/stack/NextJsCircle.png" alt=""/>
-                            <img class="project-skill" src="./images/stack/Tailwind.png" alt=""/>
-                            <img class="project-skill" src="./images/stack/NodeJs.svg" alt=""/>
-                            <img class="project-skill" src="./images/stack/MongoDB.svg" alt=""/>
-                            <img class="project-skill" src="./images/stack/Redux.svg" alt=""/>
-                            <img class="project-skill" src="./images/stack/Vercel.svg" alt=""/>
+                            <img class="project-skill" src="./images/stack/HTML.png" alt="" />
+                            <img class="project-skill" src="./images/stack/CSS.png" alt="" />
+                            <img class="project-skill" src="./images/stack/Javascript.svg" alt="" />
+                            <img class="project-skill" src="./images/stack/Express.png" alt="" />
+                            <img class="project-skill" src="./images/stack/NextJsCircle.png" alt="" />
+                            <img class="project-skill" src="./images/stack/Tailwind.png" alt="" />
+                            <img class="project-skill" src="./images/stack/NodeJs.svg" alt="" />
+                            <img class="project-skill" src="./images/stack/MongoDB.svg" alt="" />
+                            <img class="project-skill" src="./images/stack/Redux.svg" alt="" />
+                            <img class="project-skill" src="./images/stack/Vercel.svg" alt="" />
                         </div>
 
-                        <h2 class="project-heading">Tint & Orange</h2>
+                        <h2 class="project-heading">Parallax Effect Website</h2>
 
                         <div class="project-subheading">
-                            Its is a car modification company
-                            which provide you sheets to protect your car from scratch
+                            Developed a visually engaging website using HTML and CSS that features a smooth parallax scrolling effect.
+                             The design leverages layered backgrounds that move at varying speeds to create depth and interactivity.
+                              This project highlights my skills in modern front-end design techniques, user experience enhancement, and clean, 
+                              responsive layout implementation without JavaScript.
+
+
                         </div>
 
                         <div class="btn-group">
@@ -126,23 +132,26 @@
                     <div class="project-number project-number-left">02</div>
                     <div class="project-content project-content-right">
                         <div class="project-skills-container">
-                            <img class="project-skill" src="./images/stack/HTML.png" alt=""/>
-                            <img class="project-skill" src="./images/stack/CSS.png" alt=""/>
-                            <img class="project-skill" src="./images/stack/Javascript.svg" alt=""/>
-                            <img class="project-skill" src="./images/stack/Express.png" alt=""/>
-                            <img class="project-skill" src="./images/stack/NextJsCircle.png" alt=""/>
-                            <img class="project-skill" src="./images/stack/Tailwind.png" alt=""/>
-                            <img class="project-skill" src="./images/stack/NodeJs.svg" alt=""/>
-                            <img class="project-skill" src="./images/stack/MongoDB.svg" alt=""/>
-                            <img class="project-skill" src="./images/stack/Redux.svg" alt=""/>
-                            <img class="project-skill" src="./images/stack/Vercel.svg" alt=""/>
+                            <img class="project-skill" src="./images/stack/HTML.png" alt="" />
+                            <img class="project-skill" src="./images/stack/CSS.png" alt="" />
+                            <img class="project-skill" src="./images/stack/Javascript.svg" alt="" />
+                            <img class="project-skill" src="./images/stack/Express.png" alt="" />
+                            <img class="project-skill" src="./images/stack/NextJsCircle.png" alt="" />
+                            <img class="project-skill" src="./images/stack/Tailwind.png" alt="" />
+                            <img class="project-skill" src="./images/stack/NodeJs.svg" alt="" />
+                            <img class="project-skill" src="./images/stack/MongoDB.svg" alt="" />
+                            <img class="project-skill" src="./images/stack/Redux.svg" alt="" />
+                            <img class="project-skill" src="./images/stack/Vercel.svg" alt="" />
                         </div>
 
-                        <h2 class="project-heading">Yasharth dixit</h2>
+                        <h2 class="project-heading">Image Gallery</h2>
 
                         <div class="project-subheading">
-                            Its is a car modification company
-                            which provide you sheets to protect your car from scratch
+                            Created a clean and responsive image gallery using only HTML and CSS. 
+                            The layout is designed to adapt seamlessly across various screen sizes, with a focus on simplicity, visual appeal,
+                             and accessibility. 
+                            This project demonstrate  my ability to implement grid/flexbox-based layouts, optimize image presentation,
+                             and maintain performance without relying on JavaScript.
                         </div>
 
                         <div class="btn-group">
@@ -162,22 +171,24 @@
                     <div class="project-number project-number-right">03</div>
                     <div class="project-content project-content-left">
                         <div class="project-skills-container">
-                            <img class="project-skill" src="./images/stack/HTML.png" alt=""/>
-                            <img class="project-skill" src="./images/stack/CSS.png" alt=""/>
-                            <img class="project-skill" src="./images/stack/Javascript.svg" alt=""/>
-                            <img class="project-skill" src="./images/stack/Express.png" alt=""/>
-                            <img class="project-skill" src="./images/stack/NextJsCircle.png" alt=""/>
-                            <img class="project-skill" src="./images/stack/Tailwind.png" alt=""/>
-                            <img class="project-skill" src="./images/stack/NodeJs.svg" alt=""/>
-                            <img class="project-skill" src="./images/stack/MongoDB.svg" alt=""/>
-                            <img class="project-skill" src="./images/stack/Redux.svg" alt=""/>
-                            <img class="project-skill" src="./images/stack/Vercel.svg" alt=""/>
+                            <img class="project-skill" src="./images/stack/HTML.png" alt="" />
+                            <img class="project-skill" src="./images/stack/CSS.png" alt="" />
+                            <img class="project-skill" src="./images/stack/Javascript.svg" alt="" />
+                            <img class="project-skill" src="./images/stack/Express.png" alt="" />
+                            <img class="project-skill" src="./images/stack/NextJsCircle.png" alt="" />
+                            <img class="project-skill" src="./images/stack/Tailwind.png" alt="" />
+                            <img class="project-skill" src="./images/stack/NodeJs.svg" alt="" />
+                            <img class="project-skill" src="./images/stack/MongoDB.svg" alt="" />
+                            <img class="project-skill" src="./images/stack/Redux.svg" alt="" />
+                            <img class="project-skill" src="./images/stack/Vercel.svg" alt="" />
                         </div>
 
-                        <h2 class="project-heading">Yasharth Dixit</h2>
+                        <h2 class="project-heading">Portfolio Demo website</h2>
 
                         <div class="project-subheading">
-                           A website for interior designer to showcase their works and samples
+                            Designed and developed a fully responsive portfolio website using HTML and CSS to showcase my projects, skills, and background. 
+                            The site features a clean user interface, structured layout, and smooth navigation to enhance the user experience. 
+                            This project reflects my proficiency in front-end development, responsive design, and attention to detail in creating a professional online presence.
                         </div>
 
                         <div class="btn-group">
@@ -197,22 +208,23 @@
                     <div class="project-number project-number-left">04</div>
                     <div class="project-content project-content-right">
                         <div class="project-skills-container">
-                            <img class="project-skill" src="./images/stack/HTML.png" alt=""/>
-                            <img class="project-skill" src="./images/stack/CSS.png" alt=""/>
-                            <img class="project-skill" src="./images/stack/Javascript.svg" alt=""/>
-                            <img class="project-skill" src="./images/stack/Express.png" alt=""/>
-                            <img class="project-skill" src="./images/stack/NextJsCircle.png" alt=""/>
-                            <img class="project-skill" src="./images/stack/Tailwind.png" alt=""/>
-                            <img class="project-skill" src="./images/stack/NodeJs.svg" alt=""/>
-                            <img class="project-skill" src="./images/stack/MongoDB.svg" alt=""/>
-                            <img class="project-skill" src="./images/stack/Redux.svg" alt=""/>
-                            <img class="project-skill" src="./images/stack/Vercel.svg" alt=""/>
+                            <img class="project-skill" src="./images/stack/HTML.png" alt="" />
+                            <img class="project-skill" src="./images/stack/CSS.png" alt="" />
+                            <img class="project-skill" src="./images/stack/Javascript.svg" alt="" />
+                            <img class="project-skill" src="./images/stack/Express.png" alt="" />
+                            <img class="project-skill" src="./images/stack/NextJsCircle.png" alt="" />
+                            <img class="project-skill" src="./images/stack/Tailwind.png" alt="" />
+                            <img class="project-skill" src="./images/stack/NodeJs.svg" alt="" />
+                            <img class="project-skill" src="./images/stack/MongoDB.svg" alt="" />
+                            <img class="project-skill" src="./images/stack/Redux.svg" alt="" />
+                            <img class="project-skill" src="./images/stack/Vercel.svg" alt="" />
                         </div>
 
-                        <h2 class="project-heading">Granit</h2>
+                        <h2 class="project-heading">Know our Defense (scrolling Effect)</h2>
 
                         <div class="project-subheading">
-                            A archietecture website to plan your building or home (English Language)
+                            Developed an informative and visually immersive website titled "Know Our Defense", using HTML and CSS with a parallax scrolling effect. The site presents key aspects of India's defense forces through layered backgrounds and smooth scrolling transitions, enhancing user engagement.
+                             This project showcases my ability to combine storytelling with front-end design, creating an impactful user experience without using JavaScript.
                         </div>
 
                         <div class="btn-group">
@@ -236,26 +248,32 @@
             <div class="skill-container-left">
                 <h2 class="skill-heading">
                     <span class="caps">M</span>e and
-                    <br/>
+                    <br />
                     MyTech Stack
                 </h2>
 
                 <div class="skill-subheading">
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid dolores cupiditate, eligendi iure
-                         rerum totam, dignissimos omnis officiis consectetur deleniti quisquam ea nulla fugiat tempora suscipit
-                          modi assumenda reiciendis quos.
-                        </p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid dolores cupiditate, eligendi
+                        iure
+                        rerum totam, dignissimos omnis officiis consectetur deleniti quisquam ea nulla fugiat tempora
+                        suscipit
+                        modi assumenda reiciendis quos.
+                    </p>
 
-                          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid dolores cupiditate, eligendi iure
-                         rerum totam, dignissimos omnis officiis consectetur deleniti quisquam ea nulla fugiat tempora suscipit
-                          modi assumenda reiciendis quos.
-                        </p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid dolores cupiditate, eligendi
+                        iure
+                        rerum totam, dignissimos omnis officiis consectetur deleniti quisquam ea nulla fugiat tempora
+                        suscipit
+                        modi assumenda reiciendis quos.
+                    </p>
 
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid dolores cupiditate, eligendi iure
-                         rerum totam, dignissimos omnis officiis consectetur deleniti quisquam ea nulla fugiat tempora suscipit
-                          modi assumenda reiciendis quos.
-                        </p>
-            </div>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid dolores cupiditate, eligendi
+                        iure
+                        rerum totam, dignissimos omnis officiis consectetur deleniti quisquam ea nulla fugiat tempora
+                        suscipit
+                        modi assumenda reiciendis quos.
+                    </p>
+                </div>
             </div><!-- skill container left closed here -->
 
             <div class="skill-container-right">
@@ -281,26 +299,27 @@
                 <img src="./images/stack/Typescript.svg" alt="" class="skills-logo" />
                 <img src="./images/stack/Vercel.svg" alt="" class="skills-logo" />
                 <img src="./images/stack/Redux.svg" alt="" class="skills-logo" />
- </div>
+            </div>
 
-    </div> <!-- wrapper end -->
+        </div> <!-- wrapper end -->
 
-    <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
-    <script src="https://kit.fontawesome.com/58a810656e.js" crossorigin="anonymous"></script>
-    <script>
-      var typeData = new Typed(".role", {
-        strings: [
-          "Full Stack Developer",
-          "Web Developer",
-          "UI-UX Designer",
-          "Backend Developer",
-          "Coder",
-        ],
-        loop: true,
-        typeSpeed: 100,
-        backSpeed: 80,
-        backDelay: 1000,
-      });
-    </script>
+        <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
+        <script src="https://kit.fontawesome.com/58a810656e.js" crossorigin="anonymous"></script>
+        <script>
+            var typeData = new Typed(".role", {
+                strings: [
+                    "Full Stack Developer",
+                    "Web Developer",
+                    "UI-UX Designer",
+                    "Backend Developer",
+                    "Coder"
+                ],
+                loop: true,
+                typeSpeed: 100,
+                backSpeed: 80,
+                backDelay: 1000,
+            });
+        </script>
 </body>
+
 </html>
