contact us section

--- a/index.html
+++ b/index.html
@@ -300,6 +300,58 @@
                 <img src="./images/stack/Vercel.svg" alt="" class="skills-logo" />
                 <img src="./images/stack/Redux.svg" alt="" class="skills-logo" />
             </div>
+            </div>
+
+
+            <!-- -----CONTACT US SECTION-------- -->
+
+            <div class="contactus-form-container">
+                <div class="container">
+
+                    <h1 class="contactus-heading">Contact me</h1>
+
+                    <h3 class="contactus-sub-heading">Questions,thoughts, or just want to say hello?</h3>
+
+
+                    <div class="contactus-form-container">
+                        <form action="">
+                            <div class="formfeild-container">
+                                <input class="formfeild"
+                                type="text"
+                                name="name"
+                                id=""
+                                placeholder="Enter your name" />
+
+                                <!-- FOR EMAIL -->
+
+                                <input class="formfeild"
+                                type="email"
+                                id=""
+                                placeholder="Enter your email address" />  <!-- placeholder ka means hota hai hamara box me default text -->
+
+                                <!-- text area -->
+
+                                <textarea name="Message"
+                                id="" cols="30" rows="10"
+                                class="formfeild formfeild-textarea"
+                                placeholder="Enter your message"></textarea>
+
+
+                            </div> <!-- formfill div ends here -->
+
+                           <div>
+                            <button type="submit" class="btn-pink" id="submit-btn">
+                                Send Message<i class="submit-icon fa-solid fa-paper-plane"></i> <!-- i tag for icons -->
+                            </button>
+
+                           </div>
+                            
+                        </form>
+
+                    </div>
+                </div>
+
+            </div>  <!-- CONTACT US SECTION ENDS HERE -->
 
         </div> <!-- wrapper end -->
 
