--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
             <div class="navbar">
 
                 <div class="logo-container">
-                    <img src="./images/userAsset/NavLogo.jpg" class="logo">
-                    <div class="logo-text">ohn Doe</div>
+                    <img src="01y.png" class="logo">
+                    <div class="logo-text">asharth dixit</div>
                 </div>
 
                 <div class="nav-items">
@@ -73,7 +73,7 @@
                     </div>
 
                     <div class="user-image">
-                        <img src="img.jpg" style="width: 350px;" alt="" />
+                        <img src="img01.jpg" style="width: 300px;" alt="" />
                     </div>
                 </div>
             </div>
@@ -305,7 +305,7 @@
 
             <!-- -----CONTACT US SECTION-------- -->
 
-            <div class="contactus-form-container">
+            <div class="contactus-form-container" id="contactme">  <!-- by giving id =contatcme, when we click contact me btn then we directly reach to contact me section on website -->
                 <div class="container">
 
                     <h1 class="contactus-heading">Contact me</h1>
@@ -314,7 +314,7 @@
 
 
                     <div class="contactus-form-container">
-                        <form action="">
+                        <form class="form" action="">
                             <div class="formfeild-container">
                                 <input class="formfeild"
                                 type="text"
@@ -328,6 +328,13 @@
                                 type="email"
                                 id=""
                                 placeholder="Enter your email address" />  <!-- placeholder ka means hota hai hamara box me default text -->
+
+                                <!-- FOR SUBJECT SECTION  -->
+
+                                 <input class="formfeild"
+                                type="Subject"
+                                id=""
+                                placeholder="Enter the Subject here" />
 
                                 <!-- text area -->
 
@@ -352,6 +359,39 @@
                 </div>
 
             </div>  <!-- CONTACT US SECTION ENDS HERE -->
+
+
+            <!-- FOOTER ABOUT ME SECTION -->
+
+            <footer>
+                <div class="container">
+                    <div class="footer-wrapper">
+                        <div class="footer-faded-text">Yasharth Dixit</div>
+
+                        <div class="link-wrapper">
+                            <div>
+                                <a href="#projects">Projects</a>
+                            </div>
+                              <div>
+                                <a href="#skills">Skills</a>
+                            </div>
+                              <div>
+                                <a href="#contactme">Contact me</a>
+                            </div>
+                        </div>
+
+                        <div class="icon-wrapper">
+                            <i class="fa-brands fa-linkedin icon"></i>
+                            <i class="fa-brands fa-github icon"></i>
+                            <i class="fa-brands fa-twitter icon"></i>
+                            <i class="fa-brands fa-instagram icon"></i>
+                            <i class="fa-regular fa-envelope icon"></i>
+                        </div>
+
+
+                    </div>
+                </div>
+            </footer>
 
         </div> <!-- wrapper end -->
 
