--- a/index.html
+++ b/index.html
@@ -107,10 +107,8 @@
                         <h2 class="project-heading">Parallax Effect Website</h2>
 
                         <div class="project-subheading">
-                            Developed a visually engaging website using HTML and CSS that features a smooth parallax scrolling effect.
-                             The design leverages layered backgrounds that move at varying speeds to create depth and interactivity.
-                              This project highlights my skills in modern front-end design techniques, user experience enhancement, and clean, 
-                              responsive layout implementation without JavaScript.
+                           Built a parallax scrolling website using HTML and CSS, showcasing responsive design and 
+                           user experience skills without JavaScript.
 
 
                         </div>
@@ -147,11 +145,8 @@
                         <h2 class="project-heading">Image Gallery</h2>
 
                         <div class="project-subheading">
-                            Created a clean and responsive image gallery using only HTML and CSS. 
-                            The layout is designed to adapt seamlessly across various screen sizes, with a focus on simplicity, visual appeal,
-                             and accessibility. 
-                            This project demonstrate  my ability to implement grid/flexbox-based layouts, optimize image presentation,
-                             and maintain performance without relying on JavaScript.
+                           Created a clean, responsive image gallery using only HTML and CSS with adaptive grid/flexbox layouts.
+                           Showcased skills in visual design, accessibility, and performance optimization without JavaScript.
                         </div>
 
                         <div class="btn-group">
@@ -186,9 +181,8 @@
                         <h2 class="project-heading">Portfolio Demo website</h2>
 
                         <div class="project-subheading">
-                            Designed and developed a fully responsive portfolio website using HTML and CSS to showcase my projects, skills, and background. 
-                            The site features a clean user interface, structured layout, and smooth navigation to enhance the user experience. 
-                            This project reflects my proficiency in front-end development, responsive design, and attention to detail in creating a professional online presence.
+                           Designed a fully responsive portfolio website using HTML and CSS to showcase projects, skills, and background.
+                           Demonstrated front-end proficiency with a clean UI, structured layout, and smooth user experience.
                         </div>
 
                         <div class="btn-group">
@@ -211,7 +205,7 @@
                             <img class="project-skill" src="./images/stack/HTML.png" alt="" />
                             <img class="project-skill" src="./images/stack/CSS.png" alt="" />
                             <img class="project-skill" src="./images/stack/Javascript.svg" alt="" />
-                            <img class="project-skill" src="./images/stack/Express.png" alt="" />
+                             <img class="project-skill" src="./images/stack/Express.png" alt="" />
                             <img class="project-skill" src="./images/stack/NextJsCircle.png" alt="" />
                             <img class="project-skill" src="./images/stack/Tailwind.png" alt="" />
                             <img class="project-skill" src="./images/stack/NodeJs.svg" alt="" />
@@ -223,8 +217,8 @@
                         <h2 class="project-heading">Know our Defense (scrolling Effect)</h2>
 
                         <div class="project-subheading">
-                            Developed an informative and visually immersive website titled "Know Our Defense", using HTML and CSS with a parallax scrolling effect. The site presents key aspects of India's defense forces through layered backgrounds and smooth scrolling transitions, enhancing user engagement.
-                             This project showcases my ability to combine storytelling with front-end design, creating an impactful user experience without using JavaScript.
+                           Developed "Know Our Defense" website using HTML and CSS with parallax scrolling to highlight India's defense forces.
+Showcased storytelling, design, and user engagement without relying on JavaScript.
                         </div>
 
                         <div class="btn-group">
@@ -238,6 +232,43 @@
                         </div>
                     </div>
                 </div>
+
+                <!-- PROJECT 5  -->
+                 <div class="project-card" id="project3">
+                    <div class="project-number project-number-right">05</div>
+                    <div class="project-content project-content-left">
+                        <div class="project-skills-container">
+                            <img class="project-skill" src="./images/stack/HTML.png" alt="" />
+                            <img class="project-skill" src="./images/stack/CSS.png" alt="" />
+                            <img class="project-skill" src="./images/stack/Javascript.svg" alt="" />
+                            <img class="project-skill" src="./images/stack/Express.png" alt="" />
+                            <img class="project-skill" src="./images/stack/NextJsCircle.png" alt="" />
+                            <img class="project-skill" src="./images/stack/Tailwind.png" alt="" />
+                            <img class="project-skill" src="./images/stack/NodeJs.svg" alt="" />
+                            <img class="project-skill" src="./images/stack/MongoDB.svg" alt="" />
+                            <img class="project-skill" src="./images/stack/Redux.svg" alt="" />
+                            <img class="project-skill" src="./images/stack/Vercel.svg" alt="" />
+                        </div>
+
+                        <h2 class="project-heading">Razorpay Website Clone</h2>
+
+                        <div class="project-subheading">
+                            A responsive, pixel-perfect clone of the Razorpay landing page built using Tailwind CSS. The project replicates the clean, modern UI of Razorpay, with attention to typography,
+                             spacing, and component reusability. Fully optimized for different screen sizes, showcasing proficiency in utility-first CSS and responsive design.
+                        </div>
+
+                        <div class="btn-group">
+                            <button class="btn-pink btn-project">READ MORE</button>
+                            <a href="">
+                                <i title="GithHubLink" class="fa-brands fa-github icon"></i>
+                            </a>
+                            <a href="">
+                                <i title="Live Link" class="fa-solid fa-link icon"></i>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+                
 
             </div>
         </div>
